# nuke_ndk_development

./: .env  .gdbinit  .gitignore  CMakeLists.txt  README.md  get_image_data.py
docs/: debug_nuke_processor_using_gdb.html  nuke_NDK_basices.html  plugin_build_basic_multi_sys_debug_symbols.html
nuke_ndk/linux/13.2v7/include/DDImage/: AxisOp.h  Axis_KnobI.h  Black.h  CameraOp.h  CodecHandler.h  CodecOp.h  ColorLookup.h  DeepComposite.h  Deprecation.h  DirectGeneralTile.h  GeoOp.h  ImagePlane.h  Iop.h  Knob.h  Knobs.h  LayerI.h  MultiTileIop.h  NoIop.h  NukeWrapper.h  Op.h  ParticleOp.h  PixelIop.h  PlanarI.h  PlanarIop.h  Raycast.h  Read.h  ReadGeo.h  Reader.h  RefCountedFloatBuffer.h  Row.h  Sampler.h  SceneGraph_KnobI.h  StringKnobI.h  Thread.h  TimelineRead.h  ToBuffer.h  Transform.h  ViewerContext.h  Write.h  Writer.h  (+2 more)
nuke_ndk/linux/13.2v7/include/GL/: glew.h
nuke_ndk/linux/13.2v7/include/gperftools/: tcmalloc.h
nuke_ndk/linux/13.2v7/include/python3.7m/: pyconfig.h
nuke_ndk/linux/14.0v6/include/DDImage/: Application.h  Black.h  Channel_KnobI.h  ColorLookup.h  CurveI.h  DDString.h  DeepOp.h  DeepSample.h  FileStream.h  File_KnobI.h  GeoSelectKnobI.h  HConvolve.h  HeapAllocator.h  Info2D.h  Knob.h  Knobs.h  LightContext.h  MemoryBuffer.h  Mesh.h  MetaData.h  ModifyGeomOp.h  NoIop.h  NukePreferences.h  OpTreeHandler.h  Particles.h  PathExpressionKnobI.h  PtrStridedIterator.h  Read.h  ShaderOp.h  SlrCoShader.h  SlrPrimInfo.h  SlrScene.h  SlrShader.h  SlrShadingContext.h  SlrSurfaceShader.h  SlrThreadContext.h  Store.h  TextureFilter.h  ViewFrustum.h  ViewerContext.h  (+4 more)
nuke_ndk/linux/14.0v6/include/fdk/: fdkBaseVersionNumbers.h
nuke_ndk/linux/14.0v6/include/ndk/: ndkVersionNumbers.h
nuke_ndk/linux/14.0v6/include/usg/: usgUsdAbstractionVersionNumbers.h
nuke_ndk/linux/14.1v8/include/DDImage/: AxisOp.h  AxisVals.h  CameraOp.h  ChannelPack.h  ColorKnobI.h  DeepComposite.h  DeepFilterOp.h  DeepPixel.h  DeepPixelOp.h  DeepSample.h  Deprecation.h  FileOp.h  FileReader.h  FlaggingKnobClosure.h  GeoReader.h  GeoReaderDescription.h  GeomOp.h  GeomOpKnobs.h  Knob.h  Knobs.h  LightContext.h  LightMaterialOpI.h  LightOp.h  LinkKnobI.h  LookAt.h  LookupCurves.h  Material.h  MaterialOpI.h  Matrix4.h  Memory.h  MemoryHolder.h  ModifyGeo.h  ModifyGeomOp.h  NodeI.h  NukeWrapper.h  Op.h  ParticlesSprite.h  PathExpressionKnobI.h  PathKnobI.h  PixelIop.h  (+24 more)
nuke_ndk/linux/14.1v8/include/fdk/: fdkBaseVersionNumbers.h
nuke_ndk/linux/14.1v8/include/gperftools/: tcmalloc.h
nuke_ndk/linux/14.1v8/include/ndk/: ndkVersionNumbers.h
nuke_ndk/linux/14.1v8/include/openassetio/: export.h
nuke_ndk/linux/14.1v8/include/openassetio_mediacreation/: openassetio_mediacreation.hpp
nuke_ndk/linux/14.1v8/include/python3.9/: pyconfig.h
nuke_ndk/linux/14.1v8/include/usg/: usgUSDVersionNumbers.h  usgUsdAbstractionVersionNumbers.h
nuke_ndk/linux/15.2v9/include/Blink/: BlinkImpl.h
nuke_ndk/linux/15.2v9/include/DDImage/: AxisOp.h  Axis_KnobI.h  Channel.h  ChannelSet.h  Channel_KnobI.h  CodecOp.h  ComplexLightOp.h  ControlPointCollectionKnobI.h  Deprecation.h  DepthMapRender.h  ElementI.h  Enumeration_KnobI.h  ExtendedOpProperties.h  Format.h  GeomOp.h  GeomOpKnobs.h  GraphScope.h  GraphScopeRepository.h  GsvKnobI.h  GsvSet.h  ImagePlane.h  Interest.h  Iop.h  IopInfo.h  Knob.h  Knobs.h  LayerI.h  MaterialOpI.h  ModifyGeomOp.h  NodeI.h  NukeWrapper.h  Op.h  OutputContext.h  PathExpressionKnobI.h  PathKnobI.h  Pixel.h  PrimitiveContext.h  Quaternion.h  Radio_KnobI.h  Read.h  (+26 more)
nuke_ndk/linux/15.2v9/include/fdk/: fdkBaseVersionNumbers.h
nuke_ndk/linux/15.2v9/include/ndk/: ndkVersionNumbers.h
nuke_ndk/linux/15.2v9/include/python3.10/: pyconfig.h
nuke_ndk/linux/15.2v9/include/usg/: api.h  usgUSDVersionNumbers.h  usgUsdAbstractionVersionNumbers.h
nuke_ndk/linux/16.1v2/include/DDImage/: ArrayKnobI.h  Attribute.h  AxisSceneOp.h  Black.h  Box.h  CameraOp.h  CameraSceneOp.h  ChannelSet.h  Channel_KnobI.h  ControlPointCollectionKnobI.h  CreateOrEditGeomOp.h  CurveKnobI.h  DDMath.h  DDWindows.h  Deprecation.h  DownRez.h  Executable.h  Execute.h  Filter.h  GeneralInfo.h  GeoReader.h  GeoSelectKnobI.h  GeomOpMixIns.h  GlCacheApi.h  Info2D.h  Iop.h  IopInfo.h  KnobMixIns.h  LUT.h  LightContext.h  LightSceneOp.h  List_KnobI.h  Material.h  MaterialOpI.h  Matrix4.h  ModifyGeomOp.h  NullGeo.h  ParticleOp.h  PathExpressionKnobI.h  Pixel.h  (+28 more)
nuke_ndk/linux/16.1v2/include/fdk/: fdkBaseVersionNumbers.h
nuke_ndk/linux/16.1v2/include/ndk/: api.h  ndkVersionNumbers.h
nuke_ndk/linux/16.1v2/include/usg/: usgUSDVersionNumbers.h  usgUsdAbstractionVersionNumbers.h
nuke_ndk/linux/17.0v1/include/Blink/: Blink.h
nuke_ndk/linux/17.0v1/include/DDImage/: AnimationHolderI.h  Authoring.h  AxisOp.h  AxisVals.h  Axis_KnobI.h  CameraSceneOp.h  ChannelPack.h  ConstrainOpI.h  Convolve.h  CurveI.h  DDString.h  DeepAccumPixelOp.h  DeepComposite.h  DeepPlane.h  DeepReader.h  DeepSample.h  Description.h  DrawIop.h  ElementI.h  Enumeration_KnobI.h  FileOp.h  FileWriter.h  GPUContext.h  GeneralTile.h  GeoInfo.h  GeoLight.h  GeoReaderDescription.h  GeoSelection.h  GeomOp.h  GeomOpKnobs.h  GeometryProviderI.h  GsvKnobI.h  Hash.h  IllumShader.h  Knob.h  Knobs.h  LightOp.h  MatrixArray.h  MemRegistrant.h  NodeI.h  (+38 more)
nuke_ndk/linux/17.0v1/include/fdk/: api.h
nuke_ndk/linux/17.0v1/include/ndk/: ndkVersionNumbers.h
nuke_ndk/linux/17.0v1/include/python3.11/: pyconfig.h
nuke_ndk/linux/17.0v1/include/usg/: api.h  usgUSDVersionNumbers.h
nuke_ndk/winx64/14.0v5/Lib/distutils/: unixccompiler.py
nuke_ndk/winx64/14.0v5/include/DDImage/: ArrayKnobI.h  Authoring.h  AxisOp.h  BlockAllocator.h  Blur.h  CameraOp.h  CameraRigOp.h  ChannelSet.h  DDMath.h  FileIop.h  GeneralInfo.h  GeneralTile.h  GeoInfo.h  GeoOp.h  GeoReaderDescription.h  GeoSelection.h  GeoWriter.h  GeomOp.h  GeometryList.h  Hash.h  Iop.h  LightMaterialOpI.h  LightOp.h  MaterialOpI.h  NodeI.h  NukeWrapper.h  Op.h  OpHints.h  OutputContext.h  ParticleRender.h  (+18 more)
scripts/: build.ps1  build.sh
src/: ImgToArray.cpp  PassThroughLite.cpp  SamplePlugin.cpp
src/include/: SamplePlugin.h
(+373 files in other folders)
